--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
-    ext.compose_version = "0.1.0-dev13"
+    ext.compose_version = "0.1.0-dev14"
     ext.coroutines_version = "1.3.6"
     ext.koin_version = "2.1.5"
     repositories {
@@ -17,11 +17,17 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.jlleitschuh.gradle.ktlint" version "9.2.1"
+}
+
+
 allprojects {
     repositories {
         google()
         jcenter()
     }
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
 }
 
 task clean(type: Delete) {
