--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,12 +11,8 @@ android {
         applicationId "com.akash.newzz_compose"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-        Properties properties = new Properties()
-        properties.load(project.rootProject.file('local.properties').newDataInputStream())
-        def apiKey = properties.getProperty("api_key")
-        buildConfigField("String", "API_KEY", apiKey)
+        versionCode 2
+        versionName "0.0.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -45,6 +41,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation project(':data')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -60,19 +57,6 @@ dependencies {
     /* ---------------------LifeCycle Extension-----------------------------*/
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
-
-    /* ---------------------Kotlin-coroutines---------------------------*/
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-
-    /*---------------------Network and Moshi----------------------------*/
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation 'com.squareup.okhttp3:okhttp:4.2.1'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.6.2'
-    implementation 'com.squareup.moshi:moshi:1.9.1'
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.9.1'
-
-
     /*-----------------------Koin-------------------------------------*/
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-android-viewmodel:$koin_version"
@@ -82,6 +66,10 @@ dependencies {
 
     /*---------------------CoilImageLoader------------------------------*/
     implementation "dev.chrisbanes.accompanist:accompanist-coil:0.1.6"
+
+    /*----------------------------Moshi-------------------------------------*/
+    implementation 'com.squareup.moshi:moshi:1.9.1'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
