--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".NewsApplication"
+        android:name=".NewzzApplication"
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.NewzzActivity"
