--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
-    ext.compose_version = "0.1.0-dev14"
-    ext.coroutines_version = "1.3.6"
-    ext.koin_version = "2.1.5"
+    ext.kotlin_version = "1.4.0"
+    ext.compose_version = "1.0.0-alpha01"
+    ext.coroutines_version = "1.3.9"
+    ext.hilt_version = "2.28-alpha"
+    ext.hilt_jetpack_config_version = "1.0.0-alpha02"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath "com.android.tools.build:gradle:4.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
