--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'dagger.hilt.android.plugin'
 
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "com.akash.newzzcompose"
@@ -51,6 +51,7 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
     /* ---------------------JetPack Compose-----------------------------*/
+    implementation "androidx.activity:activity-compose:1.4.0"
     implementation("androidx.compose.runtime:runtime:$compose_version")
     implementation("androidx.compose.runtime:runtime-livedata:$compose_version")
     implementation("androidx.compose.foundation:foundation:$compose_version")
@@ -59,8 +60,11 @@ dependencies {
     implementation("androidx.compose.ui:ui:$compose_version")
     implementation("androidx.compose.material:material:$compose_version")
     implementation("androidx.compose.material:material-icons-extended:$compose_version")
+    implementation("io.coil-kt:coil-compose:1.4.0")
 
-    implementation("androidx.ui:ui-tooling:$compose_version")
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+
 
     /* ---------------------LifeCycle Extension-----------------------------*/
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
