--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.0"
-    ext.compose_version = "1.0.0-alpha02"
+    ext.kotlin_version = "1.5.31"
+    ext.compose_version = "1.0.5"
     ext.coroutines_version = "1.3.9"
-    ext.hilt_version = "2.28-alpha"
-    ext.hilt_jetpack_config_version = "1.0.0-alpha02"
+    ext.hilt_version = "2.38.1"
+    ext.hilt_jetpack_config_version = "1.0.0-alpha03"
     repositories {
         google()
-        jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath "com.android.tools.build:gradle:7.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
@@ -27,7 +26,10 @@ plugins {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     apply plugin: "org.jlleitschuh.gradle.ktlint"
 }
