--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,10 @@ dependencies {
     /*----------------------------Moshi-------------------------------------*/
     implementation 'com.squareup.moshi:moshi:1.9.1'
 
+    implementation "androidx.navigation:navigation-compose:2.4.1"
+
+
+
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
